src/objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_story__c</fullName>
        <description>URL field that works as link to the user story which this test case is related to.</description>
        <label>User story</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Test Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>New_Test_Cases_on_Project_Status</fullName>
        <active>true</active>
        <description>New test cases can only be added to projects in status Ongoing or Proposed.</description>
        <errorConditionFormula>ISPICKVAL(Project__r.Status__c , &quot;Finished&quot;)  ||  ISPICKVAL(Project__r.Status__c , &quot;Cancelled&quot;)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>New test cases can only be added to projects in status Ongoing or Proposed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URL_validation</fullName>
        <active>true</active>
        <errorConditionFormula>if(REGEX(User_story__c,&quot;^((http|https)://)??(www[.])??([a-zA-Z0-9]|-)+?([.][a-zA-Z0-9(-|/|=|?)??]+?)+?$&quot;),false,true)</errorConditionFormula>
        <errorDisplayField>User_story__c</errorDisplayField>
        <errorMessage>Please, enter a valid url.</errorMessage>
    </validationRules>
</CustomObject>